<resources>

    /*Application name*/
    <string name="app_name">Lifeofacow</string>


    <string name="nav_header_name">Ферма 4.0</string>

    <string name="animallist">Список животных</string>
    <string name="cowpassport">Паспорт коровы</string>

    /*For Activities*/
    <string name="name_of_AddCowPassportFragment">Добавить новый паспорт коровы</string>
    <string name="name_of_CowDetailsFragment">Паспорт коровы</string>

    /*For Buttons*/
    <string name="saveButton_passport">Сохранить паспорт</string>


    /*For SplashScreen*/
    <string name="splashScreen_text">Ты знаешь,что можешь помочь корове</string>



    /*For ListofCowFragment*/
    <string name="no_newCow">Нет новых коров</string>

    <string name="сow_numberL">№Коровы</string>
    <string name="сow_porodaL">Порода</string>
    <string name="сow_mastL">Масть</string>
    <string name="сow_birthdayL">Возраст</string>
    <string name="сow_motherL">Мать</string>
    <string name="сow_fatherL">Отец</string>



    /*For AddCowPassportFragment*/
    <string name="сow_number">Номер коровы</string>
    <string name="сow_poroda">Порода</string>
    <string name="сow_mast">Масть</string>
    <string name="сow_birthday">Год рождения</string>
    <string name="сow_mother">Мать</string>
    <string name="сow_father">Отец</string>

    /*For AddCowMilkYieldFragment*/
    <string name="milkyield_date">Дата, dd mm yyyy</string>
    <string name="milkyield">Надой, л/сут</string>
    <string name="milkyield_fat_content">Жирность молока,% </string>
    <string name="milkyield_weight">Вес коровы, кг</string>





    /*For SnackBar*/
    <string name="successfully_saved_cow">Корову сохранили :=)</string>
    <string name="loading_cows_error">База данных пуста</string>


    /*Local Strings resource*/
    <string-array name="cow_breed_array">

        <item>Голштинская</item>
        <item>Симментальская</item>
        <item>Айширская</item>
        <item>Джейсерская</item>
        <item>Швицкая</item>
        <item>Холмогорская</item>
        <item>Ярославская</item>
        <item>Костромская</item>
        <item>Голштино-фризская</item>
        <item>Тагильская</item>
        <item>Бурая латвийская</item>
        <item>Красная степная</item>
        <item>Голландские</item>
        <item>Черно-пестрая</item>
        <item>Герефордская</item>
        <item>Бельгийская</item>

    </string-array>


    <string-array name="cow_suit_array">

        <item>Черная</item>
        <item>Бурая</item>
        <item>Темно-красная</item>
        <item>Желтая</item>
        <item>Белая</item>

    </string-array>

    /*For FloatingActionButton*/
    <string name="lorem_ipsum">Кнопхи</string>


</resources>
