<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mts.cow.nikolay.lifeofacow.screen.cowpassport.AddCowPassportActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="29dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_сow_numberL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/сow_numberL"
                android:textAlignment="center"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView_сow_porodaL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/сow_porodaL"
                android:textAlignment="center"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView_сow_mastL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/сow_mastL"
                android:textAlignment="center"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView_сow_birthdayL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/сow_birthdayL"
                android:textAlignment="center"
                android:textSize="16dp" />
        </TableRow>

    </TableLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listOfCows"
        android:layout_width="wrap_content"
        android:layout_height="459dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>