<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mts.cow.nikolay.lifeofacow.screen.cowpassport.AddCowPassportActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_cow_number"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:baselineAligned="false"

        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/input_cow_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:editable="false"
            android:hint="@string/сow_number"
            android:inputType="textShortMessage"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_poroda"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"

        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_cow_number"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/input_breed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:editable="false"
            android:hint="@string/сow_poroda"
            android:inputType="textShortMessage"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_mast"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"

        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_poroda"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/input_suit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:editable="false"
            android:hint="@string/сow_mast"
            android:inputType="textShortMessage"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_birthday"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:baselineAligned="false"

        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/input_birthday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:editable="false"
            android:hint="@string/сow_birthday"
            android:inputType="textShortMessage"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_mother"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"

        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/input_layout_poroda"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_birthday"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/input_mother"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:editable="false"
            android:hint="@string/сow_mother"
            android:inputType="textShortMessage"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_father"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"

        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/input_layout_mast"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_mother"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/input_father"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:editable="false"
            android:hint="@string/сow_father"
            android:inputType="textShortMessage"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/saveButton_passport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_mast" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="fill_parent"
        android:layout_height="224dp"

        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <view
            android:id="@+id/line_view"
            class="im.dacer.androidcharts.LineView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="14dp" />
    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>