<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_date"
        android:layout_width="154dp"
        android:layout_height="68dp"
        android:layout_marginEnd="111dp"

        android:layout_marginLeft="112dp"
        android:layout_marginRight="111dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/add_date_milkyield"
            android:layout_width="136dp"
            android:layout_height="50dp"
            android:editable="false"
            android:gravity="center"
            android:hint="@string/milkyield_date"
            android:inputType="textShortMessage"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_milkyield"
        android:layout_width="154dp"
        android:layout_height="66dp"

        android:layout_marginEnd="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginRight="112dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="32dp"
        android:baselineAligned="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_date"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/add_milkyield"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:editable="false"
            android:gravity="center"
            android:hint="@string/milkyield"
            android:inputType="textShortMessage"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_fat_content"
        android:layout_width="195dp"
        android:layout_height="66dp"

        android:layout_marginEnd="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_milkyield"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/add_fat_content"
            android:layout_width="192dp"
            android:layout_height="50dp"
            android:editable="false"
            android:gravity="center"
            android:hint="@string/milkyield_fat_content"
            android:inputType="textShortMessage"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_weight"
        android:layout_width="190dp"
        android:layout_height="69dp"

        android:layout_marginEnd="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_fat_content"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/add_weight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:editable="false"
            android:gravity="center"
            android:hint="@string/milkyield_weight"
            android:inputType="textShortMessage"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>



</android.support.constraint.ConstraintLayout>